# pktgate

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CONFIG.md  README.md  TEST_PLAN.md  config-schema.json  sample2.json
.github/workflows/: ci.yml  fuzz.yml
_fixes/: 01_ipv6_as_class.md  02_l2_single_dispatch.md  README.md
_review/: 00_OWNER_NOTES.md  00_PLAN.md  01_recon.md  02_architecture.md  03_rule_compiler.md  04_layer3.md  05_layer4.md  06_layer2.md  07_entry.md  08_CHECKPOINT.md  09_tc_ingress.md  10_generation_manager.md  11_bpf_loader.md  12_config_parser_validator.md  13_validate_config_tool.md  14_cross_cutting.md  15_tests_phase.md  99_REPORT.md  HANDOVER.md  TEST_AUDIT.md
bpf/: common.h  entry.bpf.c  layer2.bpf.c  layer3.bpf.c  layer4.bpf.c  maps.h  tc_ingress.bpf.c  vmlinux.h
demo/: cleanup_veth.sh  setup_veth.sh  veth_config.json
functional_tests/: conftest.py  pytest.ini  run.sh  test_dscp_tag.py  test_l2_mac.py  test_l3_ipv6.py  test_l3_subnet.py  test_l4_ports.py  test_malformed.py  test_pipeline.py  test_zz_afxdp.py  test_zz_config_edge.py  test_zz_dst_ip.py  test_zz_gen_swap.py  test_zz_lifecycle.py  test_zz_mirror_redirect.py  test_zz_rate_limit.py  test_zz_reload.py
fuzz/: fuzz_bpf_dataplane.cpp  fuzz_config_parser.cpp  fuzz_net_types.cpp  fuzz_roundtrip.cpp
fuzz/corpus_bpf_dataplane/: 01_tcp_v4_web  02_udp_v4_dns  03_tcp_v4_syn  04_tcp_v4_blocked  05_tcp_v4_dst_block  06_tcp_v6  07_tcp_v6_extheader  08_v6_fragment  09_arp  10_vlan_tagged  11_blocked_mac
fuzz/corpus_config/: minimal.json  sample2.json
fuzz/corpus_roundtrip/: regression_json_out_of_range
grafana/: pktgate-dashboard.json
rpm/: pktgate.spec
scenarios/: README.md
scripts/: build_rpm.sh  check_map_reuse.sh  check_test_as_contract.sh  install.sh  setup_env.sh  uninstall.sh
src/: main.cpp
src/compiler/: object_compiler.cpp  object_compiler.hpp  rule_compiler.cpp  rule_compiler.hpp
src/config/: config_model.hpp  config_parser.cpp  config_parser.hpp  config_validator.cpp  config_validator.hpp
src/loader/: bpf_loader.cpp  bpf_loader.hpp  map_manager.cpp  map_manager.hpp  map_registry.cpp  map_registry.hpp
src/metrics/: prometheus_exporter.hpp
src/pipeline/: deploy_stats.hpp  generation_manager.cpp  generation_manager.hpp  pipeline_builder.cpp  pipeline_builder.hpp  stats_reader.hpp
src/util/: log.hpp  net_types.hpp
src/xdp/: xdp_socket.cpp  xdp_socket.hpp  xdp_socket_manager.cpp  xdp_socket_manager.hpp
systemd/: pktgate.conf  pktgate.service
tests/: bench_compile.cpp  test_afxdp_config.cpp  test_byte_layout.cpp  test_check_consistency.sh  test_concurrency.cpp  test_config_parser.cpp  test_config_validation.cpp  test_config_validator.cpp  test_fault_injection.cpp  test_generation_logic.cpp  test_ipv6.cpp  test_map_registry.cpp  test_net_types.cpp  test_object_compiler.cpp  test_packet_builder.cpp  test_pipeline_integration.cpp  test_prometheus.cpp  test_roundtrip.cpp  test_rule_compiler_edge.cpp  test_stress.cpp
tests/bpf/: test_bpf_dataplane.cpp  test_skeleton_invariants.cpp
tests/fixtures/validate_config_bad/: cos_rewrite.json  dst_ip_wildcard.json  empty_l3_match.json  l3_with_l4_field.json  src_dst_combo.json  unknown_subnet_ref.json
tests/fixtures/validate_config_good/: l2_compound_vlan_ethertype.json  l3_dst_ip.json  l4_tcp_flags_syn.json  minimal.json
tools/: validate_config.cpp
